--- a/vagrant/centos7-ansible/Vagrantfile
+++ b/vagrant/centos7-ansible/Vagrantfile
@@ -18,7 +18,8 @@ Vagrant.configure("2") do |config|
   config.vm.define "server1" do |server1|
     server1.vm.box = "centos/7"
     server1.vm.network "private_network", ip: "192.168.25.3"
-    server1.vm.provision "shell", inline: "useradd ansible; echo -e 'P@$$w0rd123\nP@$$w0rd123' | passwd ansible; sed -i -E 's/^PasswordAuthentication no/PasswordAuthentication yes/' /etc/ssh/sshd_config; systemctl reload sshd; hostnamectl set-hostname server1"
+    server1.vm.provision "shell", inline: "useradd ansible; echo -e 'P@$$w0rd123\nP@$$w0rd123' | passwd ansible; \
+    sed -i -E 's/^PasswordAuthentication no/PasswordAuthentication yes/' /etc/ssh/sshd_config; systemctl reload sshd; hostnamectl set-hostname server1"
   end
 
   # The most common configuration options are documented and commented below.
