--- a/LinuxGauntlet/RHEL6/Vagrantfile
+++ b/LinuxGauntlet/RHEL6/Vagrantfile
@@ -17,6 +17,8 @@ Vagrant.configure("2") do |config|
     server2.vm.network "private_network", ip: "192.168.25.5"
   end
   
+  config.vm.provision "ansible" do |ansible|
+  end
   # The most common configuration options are documented and commented below.
   # For a complete reference, please see the online documentation at
   # https://docs.vagrantup.com.
