--- a/LinuxGauntlet/RHEL6/Vagrantfile
+++ b/LinuxGauntlet/RHEL6/Vagrantfile
@@ -18,6 +18,8 @@ Vagrant.configure("2") do |config|
   end
   
   config.vm.provision "ansible" do |ansible|
+    ansible.verbose = "v"
+    ansible.playbook = "gradebook.yml"
   end
   # The most common configuration options are documented and commented below.
   # For a complete reference, please see the online documentation at
