--- a/LinuxGauntlet/RHEL6/Vagrantfile
+++ b/LinuxGauntlet/RHEL6/Vagrantfile
@@ -19,7 +19,7 @@ Vagrant.configure("2") do |config|
   
   config.vm.provision "ansible" do |ansible|
     ansible.verbose = "v"
-    ansible.playbook = "gradebook.yml"
+    ansible.playbook = "scorebook.yml"
   end
   # The most common configuration options are documented and commented below.
   # For a complete reference, please see the online documentation at
