--- a/LinuxGauntlet/RHEL6/Vagrantfile
+++ b/LinuxGauntlet/RHEL6/Vagrantfile
@@ -10,6 +10,7 @@ Vagrant.configure("2") do |config|
   config.vm.define "server1" do |server1|
     server1.vm.box = "generic/centos6"
     server1.vm.network "private_network", ip: "192.168.25.4"
+    server1.vm.provision "shell", inline: "yum install -y libselinux-python"
   end
 
   config.vm.define "server2" do |server2|
