--- a/DockerContainers/MonkikoWebsite-Apache/Dockerfile
+++ b/DockerContainers/MonkikoWebsite-Apache/Dockerfile
@@ -1,8 +1,2 @@
-FROM ubuntu 
-RUN apt update 
-RUN apt-get install –y apache2 
-RUN apt-get install –y apache2-utils 
-RUN apt clean 
-EXPOSE 80
-CMD [“apache2ctl”, “-D”, “FOREGROUND”]
+FROM httpd
 COPY . /var/www/html
